test/corpus/expressions/ap_exp.txt
================================================================================
Application Expression
================================================================================

inc(1)

--------------------------------------------------------------------------------

(program
  (expression
    (ap
      (expression
        (ident))
      (expression
        (int_lit)))))
