test/corpus/expressions/infix_exps/assign.txt
============
Assign Infix Expression
============

foo = bar

--------

(program 
    (expression 
        (infix_exp 
            (assign 
                (expression (ident))
                (expression (ident))
            )
        )
    )
)
