test/corpus/expressions/infix_exps/bitwise_and.txt
============
Bitwise And Infix Expression
============

1010 & 1100

--------

(program 
    (expression 
        (infix_exp 
            (bitwise_and 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
