test/corpus/expressions/infix_exps/cons_exp.txt
================================================================================
Cons Expression
================================================================================

a::b::nil

--------------------------------------------------------------------------------

(program
  (expression
    (infix_exp
      (cons_exp
        (expression
          (ident))
        (expression
          (infix_exp
            (cons_exp
              (expression
                (ident))
              (expression
                (nil_exp)))))))))
