test/corpus/expressions/infix_exps/divide.txt
============
Divide Infix Expression
============

6 / 3

-------

(program 
    (expression 
        (infix_exp 
            (divide 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
