test/corpus/expressions/infix_exps/greater_than.txt
============
Greater Than Infix Expression
============

3 > 2

--------

(program 
    (expression 
        (infix_exp 
            (greater_than 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
