test/corpus/expressions/infix_exps/greater_than_equals.txt
============
Greater Than Equals Infix Expression
============

3 >= 3

--------

(program 
    (expression 
        (infix_exp 
            (greater_than_equals 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
