test/corpus/expressions/infix_exps/less_than.txt
============
Less Than Infix Expression
============

2 < 3

--------

(program 
    (expression 
        (infix_exp 
            (less_than 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
