test/corpus/expressions/infix_exps/less_than_equals.txt
============
Less Than Equals Infix Expression
============

2 <= 3

--------

(program 
    (expression 
        (infix_exp 
            (less_than_equals 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
