test/corpus/expressions/infix_exps/logical_and.txt
============
Logical And Infix Expression
============

true && false

--------

(program 
    (expression 
        (infix_exp 
            (logical_and 
                (expression (bool_lit))
                (expression (bool_lit))
            )
        )
    )
)
