test/corpus/expressions/infix_exps/logical_or.txt
============
Logical Or Infix Expression
============

true || false

--------

(program 
    (expression 
        (infix_exp 
            (logical_or 
                (expression (bool_lit))
                (expression (bool_lit))
            )
        )
    )
)
