test/corpus/expressions/infix_exps/minus.txt
============
Minus Infix Expression
============

2 - 3


-------

(program 
    (expression 
        (infix_exp 
            (minus 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
