test/corpus/expressions/infix_exps/plus.txt
=========
Plus Infix Expression
=========

1 + 1

------

(program
    (expression 
        (infix_exp 
            (plus 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
