test/corpus/expressions/infix_exps/pow.txt
============
Power Infix Expression
============

2 ** 3

--------

(program 
    (expression 
        (infix_exp 
            (pow 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
