test/corpus/expressions/infix_exps/string_equals.txt
================================================================================
String Equals Infix Expression
================================================================================

"hi" $== "hi" $= "hi" $ "hi"

--------------------------------------------------------------------------------

(program
  (expression
    (infix_exp
      (string_lit_equals
        (expression
          (string_lit))
        (expression
          (infix_exp
            (string_lit_equals
              (expression
                (string_lit))
              (expression
                (infix_exp
                  (string_lit_equals
                    (expression
                      (string_lit))
                    (expression
                      (string_lit))))))))))))
