test/corpus/expressions/infix_exps/substr1.txt
============
Substring One Infix Expression
============

"hello" =. 2

--------

(program 
    (expression 
        (infix_exp 
            (substr1 
                (expression (string))
                (expression (int_lit))
            )
        )
    )
)
