test/corpus/expressions/infix_exps/times.txt
============
Times Infix Expression
============

2 * 3

---------

(program 
    (expression 
        (infix_exp 
            (times 
                (expression (int_lit))
                (expression (int_lit))
            )
        )
    )
)
