test/corpus/expressions/literals/string.txt
================================================================================
String Literal
================================================================================

"Hello World"

--------------------------------------------------------------------------------

(program
  (expression
    (string_lit)))
