test/corpus/expressions/nil_exp.txt
================================================================================
Nil Expression
================================================================================

nil

--------------------------------------------------------------------------------

(program
  (expression
    (nil_exp)))
