test/corpus/filler/dot_ident.txt
================================================================================
Dot Identifier
================================================================================

let taxicab.number: Int = 1729 in
taxicab.number

--------------------------------------------------------------------------------
    (program
      (expression
        (let
          (pat
            (typeann
              (pat
                (ident))
              (type)))
          (expression
            (int_lit))
          (expression
            (ident)))))
