test/corpus/filler/filler.txt
================================================================================
Filler Expression
================================================================================

??

--------------------------------------------------------------------------------
(program
    (expression
        (hole
            (filler_hole))))
