test/corpus/patterns/typeann.txt
================================================================================
Type Annotation Pattern
================================================================================

let x: Int = 1 in
x

--------------------------------------------------------------------------------

(program
  (expression
    (let
      (pat
        (typeann
          (pat
            (ident))
          (type)))
      (expression
        (int_lit))
      (expression
        (ident)))))
